# particlefront

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ButtonObject.h  Camera.h  CharacterEntity.h  Collider.h  Entity.h  EntityManager.h  FontManager.h  Frustrum.h  Image.h  InputManager.h  ModelManager.h  Renderer.h  ShaderManager.h  Skybox.h  TextObject.h  TextureManager.h  UIObject.h  utils.h
src/: main.cpp  utils.cpp  utils.h
src/assets/models/: cube.glb  ground-collider.glb  lava.glb  walls.glb
src/assets/shaders/glsl/: composite.frag  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  pbr.frag  pbr.vert  skybox.frag  skybox.vert  ssr.comp  ui.frag  ui.vert
src/engine/: ButtonObject.h  Camera.h  CharacterEntity.cpp  CharacterEntity.h  Collider.cpp  Collider.h  CollisionBox.h  Entity.cpp  Entity.h  EntityManager.h  FontManager.cpp  FontManager.h  Frustrum.cpp  Frustrum.h  Image.h  InputEvent.h  InputManager.cpp  InputManager.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  Skybox.cpp  Skybox.h  TextManager.cpp  TextObject.cpp  TextObject.h  TextureManager.cpp  TextureManager.h  UIManager.cpp  UIManager.h  UIObject.cpp  UIObject.h  renderer.cpp  (+2 more)
src/game/: GameInstance.cpp  Scenes.cpp  Scenes.h
src/game/MainMenu/: MainMenuFunctions.h
src/game/Prefabs/: Enemy.h  Player.h
